--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         createApp({
             setup() {
-                const listZ = ref(zhonghe)
+                const listZ = ref(zonghe)
                 return {
                     listZ
                 }
