--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
     <div id="app">
-        <div>{{zhonghe[1]["招录单位名称"]}}</div>
+        <div>{{listZ[1]["招录单位名称"]}}</div>
     </div>
 
     <script>
